1- Promovendo ajustes/adaptações para feature de criação de rotina, para poder criar tanto uma tarefa, como a categoria de forma independentes.
2- Ajustes finos nas demais parte da fature.
