# src/tasks/schema/task.schema.ts
@@ -19,7 +19,12 @@ export const taskSchema = new EntitySchema<Tasks>({
     title: { type: 'string', length: 255, index: true },
     description: { type: 'string', length: 255 },
     user: { kind: 'm:1', entity: () => User },
-    category: { kind: 'm:1', entity: () => Category, default: null },
+    category: {
+      kind: 'm:1',
+      entity: () => Category,
+      default: null,
+      nullable: true,
+    },
     completed: { type: 'string' },
     updateAt: { type: 'timestamptz', defaultRaw: 'now()' },
     createAt: { type: 'timestamptz', defaultRaw: 'now()' },
@@ -35,6 +40,11 @@ export const taskSchema = new EntitySchema<Tasks>({
       name: 'taskDeleted',
       cond: { deleteAt: { $ne: null } },
       default: false,
+    },
+    isCategory: {
+      name: 'taskIsCategory',
+      cond: { category: { $ne: null } },
+      default: true,
     },
   },
   repository: () => TasksRepository,
